--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Home work 9</title>
+     <link rel="stylesheet" href="path/to/simple-lightbox.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <load src="1-gallery.html" />
+    <load src="2-form.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+      <script src="path/to/simple-lightbox.min.js"></script>
+    <script type="module" src="./js/1-gallery.js"></script>
+     <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
