--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="1-gallery.html" />
-    <load src="2-form.html" />
+    <load src="./1-gallery.html" />
+    <load src="./2-form.html" />
 
 
       <script src="path/to/simple-lightbox.min.js"></script>
