--- a/src/2-form.html
+++ b/src/2-form.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
   <body>
     <section>
       <a href="./index.html">Go to back</a>
-    </section>
+    </section> -->
 
     <form class="feedback-form" autocomplete="off">
       <label>
@@ -23,6 +23,6 @@
       </label>
       <button type="submit">Submit</button>
     </form>
-    <script type="module" src="./js/2-form.js"></script>
+    <!-- <script type="module" src="./js/2-form.js"></script>
   </body>
-</html>
+</html> -->
