--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- <load src="./1-gallery.html" />
-    <load src="./2-form.html" /> -->
-<ul>
+    <load src="./1-gallery.html" />
+    <load src="./2-form.html" />
+<!-- <ul>
           <li><a href="./1-gallery.html">Gallery</a></li>
           <li><a href="./2-form.html">Form</a></li>
-        </ul>
+        </ul> -->
 
       <script src="path/to/simple-lightbox.min.js"></script>
     <script type="module" src="./js/1-gallery.js"></script>
