--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,13 +11,13 @@
     <section>
       <a href="./index.html">Go to back</a>
       
-    </section> -->
+    </section>
     
 <ul class="gallery"></ul>
 
-<!-- 
+
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
-</html> -->
+</html>
 
 
