--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home work 9</title>
-     <link rel="stylesheet" href="path/to/simple-lightbox.min.css">
+    <link rel="stylesheet" href="path/to/simple-lightbox.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./1-gallery.html" />
-    <load src="./2-form.html" />
-<!-- <ul>
-          <li><a href="./1-gallery.html">Gallery</a></li>
-          <li><a href="./2-form.html">Form</a></li>
-        </ul> -->
+    <!-- <load src="./1-gallery.html" />
+    <load src="./2-form.html" /> -->
+    <ul>
+      <li><a href="./1-gallery.html">Gallery</a></li>
+      <li><a href="./2-form.html">Form</a></li>
+    </ul>
 
-      <script src="path/to/simple-lightbox.min.js"></script>
+    <script src="path/to/simple-lightbox.min.js"></script>
     <script type="module" src="./js/1-gallery.js"></script>
-     <script type="module" src="./js/2-form.js"></script>
+    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
