--- a/src/2-form.html
+++ b/src/2-form.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
+      <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <section>
       <a href="./index.html">Go to back</a>
     </section>
+    
     <form class="feedback-form" autocomplete="off">
       <label>
         Email
