--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -2,24 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home work 10</title>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-    </style>
+    <title>Snackbar</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
- <body>
+  <body>
     <header class="header">
       <div class="container">
         <nav>
-                 <ul>
-            <li class="nav-link"><a href="./1-timer.html">Timer</a></li>
-            <li class="nav-link"><a href="./2-snackbar.html">Snackbar</a></li>
+          <ul>
+            <li class="nav-link"><a href="./index.html">Go to menu</a></li>
           </ul>
         </nav>
       </div>
     </header>
+    <div class="container">
+      <section class="time-section"></section>
+    </div>
+    <script type="module" src="./js/2-snackbar.js"></script>
   </body>
 </html>
